--- a/railway.toml
+++ b/railway.toml
@@ -3,7 +3,7 @@
 builder = "nixpacks"
 
 [deploy]
-startCommand = "gunicorn web_app.py"
+startCommand = "gunicorn web_app:app"
 healthcheckPath = "/api/health"
 healthcheckTimeout = 300
 restartPolicyType = "never"
