--- a/railway.toml
+++ b/railway.toml
@@ -1,9 +1,9 @@
-# railway.toml - Railway configuration file
+# railway.toml - Fixed with threading support
 [build]
 builder = "nixpacks"
 
 [deploy]
-startCommand = "gunicorn web_app:app --bind 0.0.0.0:$PORT --workers 1 --timeout 180 --keep-alive 5 --max-requests 100 --preload"
+startCommand = "gunicorn web_app:app --bind 0.0.0.0:$PORT --workers 1 --threads 4 --worker-class gthread --timeout 180 --keep-alive 5 --max-requests 100 --preload"
 healthcheckPath = "/api/health"
 healthcheckTimeout = 300
 restartPolicyType = "never"
